# SDL_Game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
examples/: sdl_game_example.cpp
include/: sdl_game_dto.h  sdl_game_game_object.h  sdl_game_input_handler.h  sdl_game_main.h  sdl_game_player.h  sdl_game_service_interface.h  sdl_game_service_locator.h  sdl_game_text.h  sdl_game_texture_manager.h
src/: sdl_game_game_object.cpp  sdl_game_input_handler.cpp  sdl_game_main.cpp  sdl_game_player.cpp  sdl_game_text.cpp  sdl_game_texture_manager.cpp
